# waskellc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  install.sh
docs/: diagrams.md
docs/flyer/: HEIA-FR-Resume-bachelor-TB-A4-ISC-DE.docx  HEIA-FR-Resume-bachelor-TB-A4-ISC-FR.docx
docs/flyer-poster/: Poster_B24ISC07_Noah_Godel_fr.ppt.pptx  Poster_B24ISC07_Noah_Godel_fr.pptx
docs/minutes/: 20240529-minutes.md  20240605-minutes.md  20240607-minutes.md  20240612-minutes.md  20240620-minutes.md  20240626-minutes.md  20240703-minutes.md  20240704-minutes.md  20240710-minutes.md  README.md
docs/report/: bibliography.yml  glossary.toml  main.typ
docs/report/lib/: ch_en_date.typ  heiafr.typ  policy.typ  version_table.typ
docs/specification/: bibliography.yml  main.typ
docs/specification/lib/: heiafr.typ  (+3 more)
playground/: .gitignore
playground/wasm/: .gitignore
playground/wasm/build_component/direct/calculator/command/: Cargo.toml
playground/wasmedge/: README.md  gc.wat
waskellc/: .gitignore  Cargo.toml  README.md  download_binaryen_tools.sh
waskellc/examples/: arithmetic_ops.wsk  import_export.wsk  partial_application.wsk  prelude_test.wsk  test1.wsk  tuples.wsk  types.wsk  x_square.wsk
waskellc/lib/: README.md  alloc.rs  compile.sh  lib.wat  prelude.wsk  rust_lib.rs
waskellc/src/: code_gen.rs  lib.rs  main.rs  parser.rs  validator.rs
waskellc/src/ast_gen/: lexer.rs  mod.rs  parser.rs
waskellc/src/code_gen/: encoder_wrapper.rs  mod.rs  wasm_generation.rs
waskellc/src/parser/: ast_gen.rs  lexer.rs  mod.rs
waskellc/src/validator/: mod.rs  symbol_check.rs  type_check.rs
waskellc/wasm-lib/: README.md  lib.wat
(+68 files in other folders)
