[package]
name = "waskellc"
description = "A compiler for the Waskell programming language (subset of Haskell) that targets WebAssembly."
repository = "https://github.com/noah44846/waskellc"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
logos = "0.14.0"
wasm-encoder = "0.212.0"
wasmparser = "0.212.0"
wasmprinter = "0.212.0"
termcolor = "1.4.1"
disjoint-sets = "0.4.2"
itertools = "0.13.0"
anyhow = "1.0.86"

[dev-dependencies]
wasmtime = "22.0.0"
wasi-common = "22.0.0"
tempfile = "3.10.1"
