[package]
name = "command"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }
clap = { version = "4.3.19", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component.target]
path = "../wit/calculator.wit"
world = "app"

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../wit/deps/adder.wit" }
